syntax = "proto3";
package brilltech.maaser.rpc;

option java_package = "com.brilltech.maaser.rpc";
option java_outer_classname = "AuthRpcProto";
option java_generate_equals_and_hash = true;

import "auth.proto";
import "treeleaf.proto";

message AuthBaseRequest {
  string refId = 1;
  string stringValue = 2;
  repeated string stringValues = 3;
  int32 intValue = 4;
  int64 longValue = 5;
  bool boolValue = 6;
  bool doubleValue = 7;
  treeleaf.protos.Debug debug = 8;
  brilltech.maaser.entities.Authorization authorization = 9;
  brilltech.maaser.entities.LoginRequest loginRequest = 10;
}

message AuthBaseResponse {
  bool error = 1;
  string msg = 2;
  treeleaf.protos.ErrorCode errorCode = 3;
  bool success = 4;
  int64 timestamp = 5;
  treeleaf.protos.Debug debug = 6;
  brilltech.maaser.entities.Session session = 7;
  repeated brilltech.maaser.entities.Session sessions = 8;
  brilltech.maaser.entities.LoginResponse loginResponse = 9;
  brilltech.maaser.entities.AuthResponse authResponse = 10;
}

service AuthRpc {
  //input: Authorization, LoginRequest; Output: AuthBaseResponse
  rpc login (AuthBaseRequest) returns (AuthBaseResponse) {}
  //input: Authorization; Output: AuthBaseResponse
  rpc logout (AuthBaseRequest) returns (AuthBaseResponse) {}
  //input: Authorization, Authorization; Output: AuthBaseResponse
  rpc authorize (AuthBaseRequest) returns (AuthBaseResponse) {}
}
